# verbiste.el

./: .dir-locals.el  .emacs-project  .gitignore  .projectile  CLAUDE.md  CLAUDE.org  COMPARISON.org  GNUmakefile  Makefile  README.md  README.org  UI-TESTING-README.md  checkdoc-file.el  cluster-analysis.sh  elisp-lint.el  examples.org  generate-screenshots.sh  integration-tests.org  issue-template-dissimilar-verbs.md  issue-template-ui-testing.md  issue-template.md  lint-file.el  lint-package.el  ob-verbiste.el  ollama.org  pyproject.toml  repro-ui-issues.el  run-embedding-analysis.sh  screenshot.el  test-ui-modes.sh  verbiste-tests.el  verbiste-ui-improvements.el  verbiste.el  verbiste_extract.xsl  verbs-fr-sample.xml
.github/workflows/: ui-tests.yml
data/: conjugation-fr.xml
drills/: README.org  abstract_concepts.org  arts_and_creation.org  business_and_communication.org  casual_or_colloquial_actions.org  daily_activities.org  emotions_and_feelings.org  gardening.org  gardening_and_plant_life.org  movement_and_transformation.org  negative_actions.org  physical_activity.org  physical_manipulation.org  professional_terminology.org  sound_and_movement.org  technical_processes.org
example/: aller.http  nomic-common-verbs.http  nomic-embed-text-aller.http  nomic-embed-text-parler.http  paraphrase-multilingual-parler.http  être.vb
screenshots/: conjugation.txt  random-verbs.txt
verbiste_tools/: __init__.py  cluster_verbs.py  embed_verbs.py  embed_with_ollama.py  embedding-utils.el  french_verbs.json  generate_drill_files.py  generate_topic_clusters.py  generate_topic_clusters_small.py  generate_verb_clusters.py  generate_verb_embeddings.py  simple_french_verbs.py  test_google_embedding.py  test_ollama.py  test_sentence_transformer.py  test_spacy_embedding.py  test_tfidf_embedding.py  xml2json.py
