[tool.poetry]
name = "verbiste-tools"
version = "0.1.0"
description = "Support scripts for verbiste.el"
authors = ["Aidan Pace <apace@defrecord.com>"]
readme = "README.md"
license = "GPL-2.0-or-later"
packages = [{include = "verbiste_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.3"
numpy = "^1.26.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
pandas = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
mypy = "^1.5.1"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xml2json = "verbiste_tools.xml2json:main"
cluster_verbs = "verbiste_tools.cluster_verbs:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = []